actualizacion, correccion del login, implementacion de productTag

--- a/frontend/src/app/components/product/getall/getall.html
+++ b/frontend/src/app/components/product/getall/getall.html
@@ -55,7 +55,7 @@
                     </span>
                 </td>
                 <td class="text-center">
-                    <div class="flex justify-center gap-2">
+                    <div class="flex justify-let gap-2">
                         <button
                             pButton
                             type="button"
