--- a/frontend/src/app/components/seller/getall/getall.html
+++ b/frontend/src/app/components/seller/getall/getall.html
@@ -48,7 +48,7 @@
                     </span>
                 </td>
                 <td class="text-center">
-                    <div class="flex justify-center gap-2">
+                    <div class="flex justify-left gap-2">
                         <button
                             pButton
                             type="button"
