--- a/frontend/src/app/components/order/getall/getall.html
+++ b/frontend/src/app/components/order/getall/getall.html
@@ -49,7 +49,7 @@
                     </span>
                 </td>
                 <td class="text-center">
-                    <div class="flex justify-center gap-2">
+                    <div class="flex justify-let gap-2">
                         <button
                             pButton
                             type="button"
